--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,5 @@
     <toy-face size="180" rounded="20" toy-number="18" group="1"></toy-face>
     <toy-face size="180" rounded="20" toy-number="15" group="1"></toy-face>
   </body>
-  <script src="../dist/bundle.cjs.js"></script>
+  <script src="../dist/bundle.js"></script>
 </html>
